Add user input system
a button is added. user can click that button and change grid size

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <button id="grid-btn">Change Grid Number</button>
     <div id="container"></div>
-    
+   
     <script src="main.js"></script>
 </body>
 </html>
